# discord

./: .dockerignore  .env_docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker_entrypoint.sh
src/: main.rs
src/commands/: dice.rs  general.rs  mod.rs  spell.rs
