[package]
name = "splitterrust_discord"
version = "0.1.0"
authors = ["Maximilian Konter <biskit1943@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
serenity = { version = "0.7", features = ["framework", "standard_framework"] }
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
splitterrust_db = { path = "../splitterrust_db" }
#rust-embed="5.1"
