[package]
name = "splitterrust_discord"
version = "0.1.0"
authors = ["Maximilian Konter <biskit1943@gmx.de>"]
edition = "2018"
repository = "https://github.com/splitterrust/discord"
license-file = "LICENSE"
description = """
The discord implementation for splitterrust, a collections of utilities
written in rust for the splittermond P&P.
"""

[dependencies]
rand = "0.7.3"
regex = "1.3.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
serenity = { version = "0.7", features = ["framework", "standard_framework"] }
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
splitterrust_db = { path = "../db", version = "0.1.0" }
cfg-if = "0.1"
